tests/functional2/lang/utf8/parse-fail.err.exp
error: syntax error, expecting end of file
       at /pwd/in.nix:1:5:
            1| 123 é 4
             |     ^
            2|
